--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "danial",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
+    "expressworks": "^3.4.3",
     "functional-javascript-workshop": "^1.0.6"
   }
 }
