--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "expressworks": "^3.4.3",
     "functional-javascript-workshop": "^1.0.6",
+    "lololodash": "^0.9.0",
     "stylus": "^0.54.5"
   }
 }
