--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "danial",
   "license": "MIT",
   "dependencies": {
+    "browserify": "^16.3.0",
+    "browserify-adventure": "^1.7.7",
     "bug-clinic": "^1.1.6",
     "bytewiser": "^2.1.0",
     "express": "^4.17.1",
