--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "functional-javascript-workshop": "^1.0.6",
     "lololodash": "^0.9.0",
     "stackup": "^1.0.2",
-    "stylus": "^0.54.5"
+    "stylus": "^0.54.5",
+    "uniq": "^1.0.1"
   }
 }
