--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expressworks": "^3.4.3",
     "functional-javascript-workshop": "^1.0.6",
     "lololodash": "^0.9.0",
+    "planetproto": "^0.9.0",
     "promise-it-wont-hurt": "^1.1.3",
     "q-io": "^1.13.6",
     "stackup": "^1.0.2",
